contact form activated

--- a/contact.html
+++ b/contact.html
@@ -121,26 +121,28 @@
 							</div>
 							<div class="col-md-7 col-md-push-1 animate-box">
 								<div class="row">
+									<form method="POST" action="https://formspree.io/korastudio.online@gmail.com" method="POST">
 									<div class="col-md-6">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name">
+											<input type="text" name="name" class="form-control" placeholder="Name">
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Email">
+											<input type="email" name="_replyto" class="form-control" placeholder="Email">
 										</div>
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
-											<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
+											<textarea name="message" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
 										</div>
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
-											<input type="submit" value="Send Message" class="btn btn-primary btn-submit">
+											<button type="submit" class="btn btn-primary btn-submit">Send Message</button>
 										</div>
 									</div>
+								</form>
 								</div>
 							</div>
 						</div>
