--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
 								<h3>Feel free to contact us</h3>
 								<ul class="contact-info">
 									<li><span><i class="icon-map5"></i></span>Serbia</li>
-									<li><span><i class="icon-phone4"></i></span>+381 63 780 2202</li>
+									<li><span><i class="icon-phone4"></i></span><a href="tel:+381637802202">+381 63 780 2202</a></li>
 									<li><span><i class="icon-envelope2"></i></span><a href="#">studio@kora.rs</a></li>
 									<li><span><i class="icon-globe3"></i></span><a href="http://kora.rs/">www.kora.rs</a></li>
 								</ul>
